--- a/pages/examples/lockscreen.html
+++ b/pages/examples/lockscreen.html
@@ -35,7 +35,7 @@
   <div class="lockscreen-item">
     <!-- lockscreen image -->
     <div class="lockscreen-image">
-      <img src="../../dist/img/user1-128x128.jpg" alt="User Image">
+      <img src="vprofpic.png" alt="User Image">
     </div>
     <!-- /.lockscreen-image -->
 
