--- a/pages/examples/lockscreen.html
+++ b/pages/examples/lockscreen.html
@@ -29,7 +29,7 @@
     <a href="../../index2.html"><b>Food Flip</b></a>
   </div>
   <!-- User name -->
-  <div class="lockscreen-name">John Doe</div>
+  <div class="lockscreen-name">Valentin Stelea</div>
 
   <!-- START LOCK SCREEN ITEM -->
   <div class="lockscreen-item">
