--- a/index2.html
+++ b/index2.html
@@ -254,8 +254,8 @@
                 <img src="dist/img/user2-160x160.jpg" class="img-circle" alt="User Image">
 
                 <p>
-                  Alexander Pierce - Web Developer
-                  <small>Member since Nov. 2012</small>
+                  Valentin Stelea - Food Flip CEO
+                  <small>Member since Apr. 2017</small>
                 </p>
               </li>
               <!-- Menu Body -->
@@ -303,7 +303,7 @@
           <img src="dist/img/user2-160x160.jpg" class="img-circle" alt="User Image">
         </div>
         <div class="pull-left info">
-          <p>Alexander Pierce</p>
+          <p>Valentin Stelea</p>
           <a href="#"><i class="fa fa-circle text-success"></i> Online</a>
         </div>
       </div>
@@ -1332,7 +1332,7 @@
     <div class="pull-right hidden-xs">
       <b>Version</b> 2.3.12
     </div>
-    <strong>Copyright &copy; 2014-2016 <a href="http://almsaeedstudio.com">Almsaeed Studio</a>.</strong> All rights
+    <strong>Copyright &copy; 2017 <a href="https://foodflip.herokuapp.com/home">Food Flip</a>.</strong> All rights
     reserved.
   </footer>
 
