--- a/pages/examples/lockscreen.html
+++ b/pages/examples/lockscreen.html
@@ -35,7 +35,7 @@
   <div class="lockscreen-item">
     <!-- lockscreen image -->
     <div class="lockscreen-image">
-      <img src="vpp.jpg" alt="User Image">
+      <img src="user2-160x160.png" alt="User Image">
     </div>
     <!-- /.lockscreen-image -->
 
