--- a/index2.html
+++ b/index2.html
@@ -517,8 +517,8 @@
             <span class="info-box-icon bg-aqua"><i class="ion ion-ios-gear-outline"></i></span>
 
             <div class="info-box-content">
-              <span class="info-box-text">CPU Traffic</span>
-              <span class="info-box-number">90<small>%</small></span>
+              <span class="info-box-text">Truck Deployed</span>
+              <span class="info-box-number">5<small></small>/7</span>
             </div>
             <!-- /.info-box-content -->
           </div>
@@ -530,8 +530,8 @@
             <span class="info-box-icon bg-red"><i class="fa fa-google-plus"></i></span>
 
             <div class="info-box-content">
-              <span class="info-box-text">Likes</span>
-              <span class="info-box-number">41,410</span>
+              <span class="info-box-text">Pickup Missions Done</span>
+              <span class="info-box-number">514+</span>
             </div>
             <!-- /.info-box-content -->
           </div>
@@ -547,8 +547,8 @@
             <span class="info-box-icon bg-green"><i class="ion ion-ios-cart-outline"></i></span>
 
             <div class="info-box-content">
-              <span class="info-box-text">Sales</span>
-              <span class="info-box-number">760</span>
+              <span class="info-box-text">Pounds Of Food Saved</span>
+              <span class="info-box-number">160k+</span>
             </div>
             <!-- /.info-box-content -->
           </div>
@@ -560,8 +560,8 @@
             <span class="info-box-icon bg-yellow"><i class="ion ion-ios-people-outline"></i></span>
 
             <div class="info-box-content">
-              <span class="info-box-text">New Members</span>
-              <span class="info-box-number">2,000</span>
+              <span class="info-box-text">People Fed</span>
+              <span class="info-box-number">133,000+</span>
             </div>
             <!-- /.info-box-content -->
           </div>
@@ -575,7 +575,7 @@
         <div class="col-md-12">
           <div class="box">
             <div class="box-header with-border">
-              <h3 class="box-title">Monthly Recap Report</h3>
+              <h3 class="box-title">Monthly Food Delivery Quantity Obtained vs. Projected (in hundreds of pounds) </h3>
 
               <div class="box-tools pull-right">
                 <button type="button" class="btn btn-box-tool" data-widget="collapse"><i class="fa fa-minus"></i>
@@ -611,42 +611,42 @@
                 <!-- /.col -->
                 <div class="col-md-4">
                   <p class="text-center">
-                    <strong>Goal Completion</strong>
+                    <strong>Daily Food Goal Completion Status</strong>
                   </p>
 
                   <div class="progress-group">
-                    <span class="progress-text">Add Products to Cart</span>
-                    <span class="progress-number"><b>160</b>/200</span>
+                    <span class="progress-text">Fresh Vegetables</span>
+                    <span class="progress-number"><b>160lbs</b>/200lbs</span>
 
                     <div class="progress sm">
-                      <div class="progress-bar progress-bar-aqua" style="width: 80%"></div>
+                      <div class="progress-bar progress-bar-aqua" style="width: 87%"></div>
                     </div>
                   </div>
                   <!-- /.progress-group -->
                   <div class="progress-group">
-                    <span class="progress-text">Complete Purchase</span>
-                    <span class="progress-number"><b>310</b>/400</span>
+                    <span class="progress-text">Fresh Bread</span>
+                    <span class="progress-number"><b>310lbs</b>/400lbs</span>
 
                     <div class="progress sm">
-                      <div class="progress-bar progress-bar-red" style="width: 80%"></div>
+                      <div class="progress-bar progress-bar-red" style="width: 75%"></div>
                     </div>
                   </div>
                   <!-- /.progress-group -->
                   <div class="progress-group">
-                    <span class="progress-text">Visit Premium Page</span>
+                    <span class="progress-text">Canned Vegetables & Fruit</span>
                     <span class="progress-number"><b>480</b>/800</span>
 
                     <div class="progress sm">
-                      <div class="progress-bar progress-bar-green" style="width: 80%"></div>
+                      <div class="progress-bar progress-bar-green" style="width: 70%"></div>
                     </div>
                   </div>
                   <!-- /.progress-group -->
                   <div class="progress-group">
-                    <span class="progress-text">Send Inquiries</span>
+                    <span class="progress-text">Bottled Potable Water</span>
                     <span class="progress-number"><b>250</b>/500</span>
 
                     <div class="progress sm">
-                      <div class="progress-bar progress-bar-yellow" style="width: 80%"></div>
+                      <div class="progress-bar progress-bar-yellow" style="width: 50%"></div>
                     </div>
                   </div>
                   <!-- /.progress-group -->
@@ -669,7 +669,7 @@
                 <!-- /.col -->
                 <div class="col-sm-3 col-xs-6">
                   <div class="description-block border-right">
-                    <span class="description-percentage text-yellow"><i class="fa fa-caret-left"></i> 0%</span>
+                    <span class="description-percentage text-red"><i class="fa fa-caret-down"></i> 5%</span>
                     <h5 class="description-header">$10,390.90</h5>
                     <span class="description-text">TOTAL COST</span>
                   </div>
@@ -687,9 +687,9 @@
                 <!-- /.col -->
                 <div class="col-sm-3 col-xs-6">
                   <div class="description-block">
-                    <span class="description-percentage text-red"><i class="fa fa-caret-down"></i> 18%</span>
-                    <h5 class="description-header">1200</h5>
-                    <span class="description-text">GOAL COMPLETIONS</span>
+                    <span class="description-percentage text-green"><i class="fa fa-caret-up"></i> 18%</span>
+                    <h5 class="description-header">+$5,954</h5>
+                    <span class="description-text">PROFIT COMPARED TO PREVIOUS MONTH</span>
                   </div>
                   <!-- /.description-block -->
                 </div>
@@ -711,7 +711,7 @@
           <!-- MAP & BOX PANE -->
           <div class="box box-success">
             <div class="box-header with-border">
-              <h3 class="box-title">Visitors Report</h3>
+              <h3 class="box-title">Countries Food Flip is currently deployed in</h3>
 
               <div class="box-tools pull-right">
                 <button type="button" class="btn btn-box-tool" data-widget="collapse"><i class="fa fa-minus"></i>
@@ -733,20 +733,20 @@
                   <div class="pad box-pane-right bg-green" style="min-height: 280px">
                     <div class="description-block margin-bottom">
                       <div class="sparkbar pad" data-color="#fff">90,70,90,70,75,80,70</div>
-                      <h5 class="description-header">8390</h5>
-                      <span class="description-text">Visits</span>
+                      <h5 class="description-header">17</h5>
+                      <span class="description-text">Countries</span>
                     </div>
                     <!-- /.description-block -->
                     <div class="description-block margin-bottom">
                       <div class="sparkbar pad" data-color="#fff">90,50,90,70,61,83,63</div>
-                      <h5 class="description-header">30%</h5>
-                      <span class="description-text">Referrals</span>
+                      <h5 class="description-header">-1.65%</h5>
+                      <span class="description-text">World Hunger %</span>
                     </div>
                     <!-- /.description-block -->
                     <div class="description-block">
                       <div class="sparkbar pad" data-color="#fff">90,50,90,70,61,83,63</div>
-                      <h5 class="description-header">70%</h5>
-                      <span class="description-text">Organic</span>
+                      <h5 class="description-header">171,349</h5>
+                      <span class="description-text">Lives Saved</span>
                     </div>
                     <!-- /.description-block -->
                   </div>
