--- a/index2.html
+++ b/index2.html
@@ -245,7 +245,7 @@
           <!-- User Account: style can be found in dropdown.less -->
           <li class="dropdown user user-menu">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-              <img src="dist/img/user2-160x160.jpg" class="user-image" alt="User Image">
+              <img src="user2-160x160.png" class="user-image" alt="User Image">
               <span class="hidden-xs">Valentin Stelea</span>
             </a>
             <ul class="dropdown-menu">
@@ -253,7 +253,7 @@
               <li class="user-header">
                 <img src="user2-160x160.png" class="img-circle" alt="User Image">
 
-                <p>
+                <p>	
                   Valentin Stelea - Food Flip CEO
                   <small>Member since Apr. 2017</small>
                 </p>
@@ -300,7 +300,7 @@
       <!-- Sidebar user panel -->
       <div class="user-panel">
         <div class="pull-left image">
-          <img src="dist/img/user2-160x160.jpg" class="img-circle" alt="User Image">
+          <img src="user2-160x160.png" class="img-circle" alt="User Image">
         </div>
         <div class="pull-left info">
           <p>Valentin Stelea</p>
@@ -786,7 +786,7 @@
                         <span class="direct-chat-timestamp pull-right">23 Jan 2:00 pm</span>
                       </div>
                       <!-- /.direct-chat-info -->
-                      <img class="direct-chat-img" src="dist/img/user1-128x128.jpg" alt="message user image"><!-- /.direct-chat-img -->
+                      <img class="direct-chat-img" src="ACFB.png" alt="message user image"><!-- /.direct-chat-img -->
                       <div class="direct-chat-text">
                         Hello, This is Valentin from the Atlanta Food Bank, do you have any bread for us today?
                       </div>
@@ -801,7 +801,7 @@
                         <span class="direct-chat-timestamp pull-left">23 Jan 2:05 pm</span>
                       </div>
                       <!-- /.direct-chat-info -->
-                      <img class="direct-chat-img" src="dist/img/user3-128x128.jpg" alt="message user image"><!-- /.direct-chat-img -->
+                      <img class="direct-chat-img" src="CC.png" alt="message user image"><!-- /.direct-chat-img -->
                       <div class="direct-chat-text">
                         Hello Valentin, and yes we do! We will be updating our online inventory @4pm!
                       </div>
@@ -816,7 +816,7 @@
                         <span class="direct-chat-timestamp pull-right">23 Jan 5:37 pm</span>
                       </div>
                       <!-- /.direct-chat-info -->
-                      <img class="direct-chat-img" src="dist/img/user1-128x128.jpg" alt="message user image"><!-- /.direct-chat-img -->
+                      <img class="direct-chat-img" src="ACFB.png" alt="message user image"><!-- /.direct-chat-img -->
                       <div class="direct-chat-text">
                         Great! Thank you! We will send a truck to your location by 4:30pm! 
                       </div>
@@ -831,7 +831,7 @@
                         <span class="direct-chat-timestamp pull-left">23 Jan 6:10 pm</span>
                       </div>
                       <!-- /.direct-chat-info -->
-                      <img class="direct-chat-img" src="dist/img/user3-128x128.jpg" alt="message user image"><!-- /.direct-chat-img -->
+                      <img class="direct-chat-img" src="CC.png" alt="message user image"><!-- /.direct-chat-img -->
                       <div class="direct-chat-text">
                         See you then!
                       </div>
@@ -847,7 +847,7 @@
                     <ul class="contacts-list">
                       <li>
                         <a href="#">
-                          <img class="contacts-list-img" src="dist/img/user1-128x128.jpg" alt="User Image">
+                          <img class="contacts-list-img" src="AFM.png" alt="User Image">
 
                           <div class="contacts-list-info">
                                 <span class="contacts-list-name">
@@ -975,42 +975,32 @@
                 <div class="box-body no-padding">
                   <ul class="users-list clearfix">
                     <li>
-                      <img src="dist/img/user1-128x128.jpg" alt="User Image">
+                      <img src="AFM.png" alt="User Image">
                       <a class="users-list-name" href="#">Atanta Fish Market</a>
                       <span class="users-list-date">Today</span>
                     </li>
                     <li>
-                      <img src="dist/img/user8-128x128.jpg" alt="User Image">
+                      <img src="APB.jpg" alt="User Image">
                       <a class="users-list-name" href="#">Applebee's</a>
                       <span class="users-list-date">Yesterday</span>
                     </li>
                     <li>
-                      <img src="dist/img/user7-128x128.jpg" alt="User Image">
-                      <a class="users-list-name" href="#">Bistro Niko</a>
+                      <img src="BT.jpg" alt="User Image">
+                      <a class="users-list-name" href="#">Bartaco</a>
                       <span class="users-list-date">12 Jan</span>
                     </li>
                     <li>
-                      <img src="dist/img/user6-128x128.jpg" alt="User Image">
-                      <a class="users-list-name" href="#">Bojanic</a>
-                      <span class="users-list-date">12 Jan</span>
-                    </li>
-                    <li>
-                      <img src="dist/img/user2-160x160.jpg" alt="User Image">
-                      <a class="users-list-name" href="#">Corner Café</a>
-                      <span class="users-list-date">13 Jan</span>
-                    </li>
-                    <li>
-                      <img src="dist/img/user5-128x128.jpg" alt="User Image">
+                      <img src="CH.png" alt="User Image">
                       <a class="users-list-name" href="#">Chipotle</a>
                       <span class="users-list-date">14 Jan</span>
                     </li>
                     <li>
-                      <img src="dist/img/user4-128x128.jpg" alt="User Image">
+                      <img src="SH.jpg" alt="User Image">
                       <a class="users-list-name" href="#">Sweet Hut</a>
                       <span class="users-list-date">15 Jan</span>
                     </li>
                     <li>
-                      <img src="dist/img/user3-128x128.jpg" alt="User Image">
+                      <img src="TJ.png" alt="User Image">
                       <a class="users-list-name" href="#">Trader Joe's</a>
                       <span class="users-list-date">15 Jan</span>
                     </li>
@@ -1019,7 +1009,7 @@
                 </div>
                 <!-- /.box-body -->
                 <div class="box-footer text-center">
-                  <a href="javascript:void(0)" class="uppercase">View All Users</a>
+                  <a href="javascript:void(0)" class="uppercase">View All Partners</a>
                 </div>
                 <!-- /.box-footer -->
               </div>
@@ -1223,7 +1213,7 @@
                     <li><i class="fa fa-circle-o text-yellow"></i> Canned Fruit </li>
                     <li><i class="fa fa-circle-o text-aqua"></i> Boxed Goods </li>
                     <li><i class="fa fa-circle-o text-light-blue"></i> Frozen Goods </li>
-                    <li><i class="fa fa-circle-o text-gray"></i> Empty Space</li>
+                    <li><i class="fa fa-circle-o text-gray"></i> Open Space</li>
                   </ul>
                 </div>
                 <!-- /.col -->
